--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "fable-splitter": "^0.1.10",
-    "gh-pages": "^1.0.0"
+    "gh-pages": "^1.0.0",
+    "reload": "^2.2.2"
   }
 }
