--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
-  "name": "test",
-  "version": "2.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "start": "fable-splitter -c splitter.config.js -w",
-    "build": "fable-splitter -c splitter.config.js -p",
-    "server": "cd public && reload -b",
-    "publish": "gh-pages -d public"
+    "postinstall": "dotnet restore src",
+    "start-server": "live-server deploy",
+    "build-fable": "cd src && dotnet fable fable-splitter -- src/App.fsproj -o build --run",
+    "start-fable": "yarn build-fable --watch",
+    "start": "concurrently -k npm:start-*",
+    "build": "concurrently -k npm:build-*",
+    "deploy": "yarn build && gh-pages -d deploy"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "handlebars": "^4.0.11",
-    "marked": "^0.3.9",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.1.0",
-    "@babel/preset-env":"^7.1.0",
-    "@babel/runtime": "^7.1.2",
-    "fable-splitter": "^2.0.0",
-    "gh-pages": "^1.1.0",
-    "reload": "^2.2.2"
+    "concurrently": "^4.0.1",
+    "fable-splitter": "^2.1.0-alpha-002",
+    "fs-extra": "^7.0.1",
+    "gh-pages": "^2.0.1",
+    "highlight.js": "^9.13.1",
+    "live-server": "^1.2.0",
+    "marked": "^0.5.1",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1"
   }
 }
