--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "start-server": "live-server deploy",
     "build-fable": "cd src && dotnet fable fable-splitter -- src/App.fsproj -o build --run",
     "start-fable": "yarn build-fable --watch",
-    "start": "concurrently -k npm:start-*",
-    "build": "concurrently -k npm:build-*",
+    "start": "concurrently npm:start-*",
+    "build": "concurrently npm:build-*",
     "deploy": "yarn build && gh-pages -d deploy"
   },
   "dependencies": {
